test/error/EnumFlagsNoValue.ci
enum* DaysOfWeek
{
	Sunday, //ERROR: enum* symbol must be assigned a value
	Monday
}
